<resources>
    <string name="app_name">Stock Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="alert_dialog_title">Enter a stock\'s ticker (E.g. "GOOG")</string>
    <string name="company_name_placeholder">Company Name</string>
    <string name="opening_price_placeholder">$52.25</string>
    <string name="current_price_placeholder">$63.45</string>
    <string name="opened_at_label">Opened at:</string>
    <string name="currently_at_label">Currently at:</string>
    <string name="stock_not_found">Error, stock not found. Might have exceeded usage limit...</string>
    <string name="database_update_error">Error updating database</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">cancel</string>
    <string name="yes">yes</string>
    <string name="no_stocks_message">No stocks added yet!</string>
    <string name="clear_confirm">Are you sure you want to clear your portfolio?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
